# wet1_v3

./: AVLTree.h  CMakeLists.txt  Player.cpp  Player.h  SortById.cpp  SortById.h  SortByScore.cpp  SortByScore.h  SortTeamById.cpp  SortTeamById.h  Team.cpp  Team.h  TwoWayList.h  WorldCupTests.cpp  main.cpp  submissions.txt  worldcup23a1.cpp  worldcup23a1.h
